--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<ol>
+		<li data-ns-test="shoppingList">stock</li>
+		<li data-ns-test="shoppingList">crypto</li>
+		<li data-ns-test="shoppingList">mf</li>
+		
+	</ol>
+	<ul>
+		<li data-ns-test="holidayList">mahabaleshwar</li>
+		<li data-ns-test="holidayList">Goa</li>
+		<li data-ns-test="holidayList">bhandardara</li>
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
